@@ -1,3 +1,7 @@
+2010-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoimageclutter.py: Added ActorFavIconNum.
+
 2010-03-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 0.6.2 release.
